--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 spotipposVersion = 0.0.1
 springBootGradleVersion = 1.3.5.RELEASE
 guavaVersion = 18.0
+commonsIoVersion = 2.4
+mockitoVersion = 1.10.8
