Added controller integ tests Changes in README Added Procfile for Heroku and changed build.gradle to add task stage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 logging:
   level:
 #    org.springframework.web: DEBUG
-    br.com.marcelomalcher: DEBUG
+#    br.com.marcelomalcher: DEBUG
 
 data:
   provincesUrl: https://raw.githubusercontent.com/VivaReal/code-challenge/master/provinces.json
