--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,12 @@ dependencies {
 	}
 	compile "org.springframework.boot:spring-boot-starter-jetty"
 
-	//compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-
 	compile "com.google.guava:guava:$guavaVersion"
 	compile "commons-io:commons-io:$commonsIoVersion"
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	//testCompile "org.mockito:mockito-core:$mockitoVersion"
 }
+
+task stage(dependsOn: build){}
+
+defaultTasks 'clean', 'build'
